--- a/04_convidados.qmd
+++ b/04_convidados.qmd
@@ -1,33 +1,39 @@
 # Convidados {#sec-convidados}
+A tela Convidados exibe uma lista dos usuários que receberam convites para acessar o Sisvar. Nessa tela, é possível gerenciar informações sobre quem enviou o convite, o status do convite (Aceito ou Aguardando) e, quando aplicável, a data de aceitação. Além disso, é possível buscar, excluir e enviar novos convites (@figu-tela04).
 
-A tela Convidados exibe uma lista dos usuários que receberam convites para acessar o Sisvar. Nessa tela, é possível gerenciar informações sobre quem enviou o convite, o status do convite (Aceito ou Aguardando) e, quando aplicável, a data de aceitação. Além disso, é possível buscar, excluir e enviar novos convites (@fig-tela).
-
-
-////fazer print da tela geral////
-
+::: {#figu-tela04}
+```{r}
+#| label: figu-tela04
+#| out-width: ~
+knitr::include_graphics("images/04_convidados/tela04.png")
+```
+Tela Convidados
+:::
 
 ## Enviar convite
+O usuário com perfil de *Instituição Admin* pode enviar um **Novo Convite** preenchendo todos os campos obrigatórios do formulário (@figu-convite). 
 
-O usuário com perfil de Instituição Admin pode enviar um **Novo Convite** preenchendo todos os campos obrigatórios do formulário (@fig-tela). 
+::: {#figu-convite}
+```{r}
+#| label: figu-convite
+#| out-width: ~
+knitr::include_graphics("images/04_convidados/convite.png")
+```
+Formulário para envio de convite
+:::
 
-////fazer print do formulário////
-
-
-No campo "Função", ao escolher a opção Gestor ou Responsável, as opções do campo “Auditoria” serão exibidas conforme cadastradas na tela [5 Auditorias](#sec-auditorias)
-
+No campo Função, ao escolher a opção *Gestor ou Responsável*, as opções do campo Auditoria serão exibidas conforme cadastradas na tela [5 Auditorias](#sec-auditorias)
 
 ::: {.callout}
 ## Nota
-
 A principal diferença desta tela em relação à tela [3 Usuários](#sec-usuarios) é que, aqui, o convite é enviado para o e-mail cadastrado, e o usuário convidado tem até 7 dias para aceitar o convite e criar sua senha (@figu-email).
 :::
-
 
 ::: {#figu-email}
 ```{r}
 #| label: figu-email
 #| out-width: ~
-knitr::include_graphics("images/03_usuarios/tela.png")
+knitr::include_graphics("images/04_convidados/email.png")
 ```
 E-mail convite
 :::
