--- a/03_usuarios.qmd
+++ b/03_usuarios.qmd
@@ -1,43 +1,42 @@
 # Usuários {#sec-usuarios}
 
-A tela Usuários exibe uma lista dos usuários cadastrados no Sisvar, organizados por perfil. Nesta tela, é possível gerenciar os usuários cadastrados, incluindo busca, visualização, edição, exclusão e adição de novos usuários @figu-tela.
+A tela Usuários exibe uma lista dos usuários cadastrados no Sisvar, organizados por Função. Nesta tela, é possível gerenciar os usuários cadastrados, incluindo busca, visualização, edição, exclusão e adição de novos usuários (@figu-tela03).
 
-
-::: {#figu-tela}
+::: {#figu-tela03}
 ```{r}
-#| label: figu-tela
+#| label: figu-tela03
 #| out-width: ~
-knitr::include_graphics("images/03_usuarios/tela.png")
+knitr::include_graphics("images/03_usuarios/tela03.png")
 ```
 Tela Usuários
 :::
 
-
-## Localizar
-O usuário com perfil de Instituição Admin pode localizar um usuário utilizando a opção **Procurar**. Ele pode visualizar os três perfis de usuários disponíveis: Gestor, Responsável e Instituição.
+## Procurar
+O usuário com Função de *Instituição Admin* pode localizar um usuário utilizando a opção **Procurar**. Ele pode visualizar as três Funções disponíveis: *Gestor, Responsável e Instituição*.
 
 ## Exibir
-Ao clicar no botão de ação **Exibir**, o usuário Instituição Admin pode visualizar as informações detalhadas de qualquer usuário, incluindo E-mail, Auditoria, Função e Convite (indicando se o usuário convidado aceitou ou não o convite).
+Ao clicar no botão de ação **Exibir**, o usuário *Instituição Admin* pode visualizar as informações detalhadas de qualquer usuário, incluindo E-mail, Auditoria, Função e Convite (indicando se o usuário convidado aceitou ou não o convite).
 
+Se o usuário selecionado for do tipo *Instituição*, o Administrador também pode revogar ou promover este usuário a administrador.
+
+## Editar
+O botão de ação **Editar** permite ao usuário *Instituição Admin* modificar as informações de qualquer usuário, com ênfase na alteração da Função.
 
 ::: callout
 ## Nota
-
-Se o usuário selecionado for do tipo Instituição, o Administrador também pode revogar ou promover este usuário a administrador.
+Se o usuário for um Administrador, não é possível alterá-lo para os perfis de *Gestor* ou *Responsável*.
 :::
 
-
-## Editar
-O botão de ação **Editar** permite ao usuário Instituição Admin modificar as informações de qualquer usuário, com ênfase na alteração da Função. 
-
-No entanto, se o usuário for um Administrador, não é possível alterá-lo para os perfis de Gestor ou Responsável.
-
 ## Excluir
-O botão de ação **Excluir** permite ao usuário Instituição Admin remover usuários, incluindo ele próprio. No entanto, não é possível excluir o último usuário Instituição Admin disponível no sistema.
+O botão de ação **Excluir** permite ao usuário *Instituição Admin* remover usuários, incluindo ele próprio.
+
+::: callout
+## Nota
+O sistema possui uma segurança para que um eventual último usuário *Instituição Admin* não possa ser excluído ou ter sua Função substituída.
+:::
 
 ## Criar
-O usuário Instituição Admin pode criar um **Novo Usuário** preenchendo todos os campos obrigatórios do formulário. A senha deve ter no mínimo 6 caracteres e incluir uma combinação de letras e números (@figu-criar-usuario).
-
+O usuário *Instituição Admin* pode criar um **Novo Usuário** preenchendo todos os campos obrigatórios do formulário. A senha deve ter no mínimo 6 caracteres e incluir uma combinação de letras e números (@figu-criar-usuario).
 
 ::: {#figu-criar-usuario}
 ```{r}
@@ -49,8 +48,7 @@ Criar Usuário
 :::
 
 
-Se o novo usuário criado for do tipo Instituição, o Admin também pode revogar o papel de Administrador deste usuário durante o processo de criação (@figu-revogar-usuario).
-
+Se o novo usuário criado for do tipo *Instituição*, o Admin também pode revogar o papel de Administrador deste usuário durante o processo de criação (@figu-revogar-usuario).
 
 ::: {#figu-revogar-usuario}
 ```{r}
