--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,3 @@
-# Introdução {.unnumbered}
+# Prefácio {.unnumbered}
 
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta lorem sed diam volutpat efficitur. Cras luctus, velit a auctor dignissim, ex ante ornare augue, et consequat libero ex imperdiet nisl. Ut sit amet mi consequat, pellentesque tortor in, feugiat enim. Ut quis auctor turpis. Ut sed nunc ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean augue ligula, ultricies vel risus vel, venenatis imperdiet dolor. Praesent porta vitae quam at elementum. Nunc tincidunt mollis ex sed posuere.
+> O **Sistema de Atualização e Validação de Recomendações (Sisvar)** foi desenvolvido para simplificar a submissão e validação das planilhas de recomendações das Auditorias Técnicas Independentes. Este manual tem como objetivo apresentar os recursos e funcionalidades do Sisvar aos usuários com perfil de **Instituição Admin**, por meio de um guia ilustrado passo a passo, proporcionando acesso rápido e fácil às informações.
