--- a/06_tacs.qmd
+++ b/06_tacs.qmd
@@ -1,20 +1,145 @@
 # TACs {#sec-tacs}
 
+A tela TACs exibe uma lista dos TACs cadastrados no Sisvar, organizadas em ordem alfabética. Nesta tela, é possível gerenciar os TACs, incluindo busca, edição, exclusão e adição de novos TACs, além da exibição para o envio e validação de planilhas-modelo (@figu-tela06).
+
+::: {#figu-tela06}
+```{r}
+#| label: figu-tela06
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/tela06.png")
+```
+Tela TACs
+:::
+
 ## Criar
-- Nome e Códigpos são obrigatórios
-- Código deve conter 3 caracteres, sendo os 2 primeiros uma letra obrigatoriamente.
+O usuário com Função de *Instituição Admin* pode criar um **Novo TAC** preenchendo todos os campos obrigatórios do formulário. O código deve conter 3 caracteres, sendo os 2 primeiros obrigatoriamente letras (@figu-criar-tac).
+
+::: {#figu-criar-tac}
+```{r}
+#| label: figu-criar-tac
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/criar-tac.png")
+```
+Criar TAC
+:::
+
+O campo **Data de Assinatura** será exibido após o preenchimento deste campo no Sistema de Cadastro de TACs. Quando preenchido, o sistema validará se a data de abertura da recomendação é anterior à data de assinatura do TAC.
+
+O campo **TAC Referência** também é exibido de acordo com o nome preenchido no Sistema de Cadastro de TACs. Ele serve para, caso necessário, juntar todos os dados de um TAC. Por exemplo, se tivermos um TAC Gongo Soco (RIZZO) e um TAC Gongo Soco (SLR), ambos são provenientes do mesmo TAC. Portanto, ambos teriam a seleção, em TAC Referência, por TAC Gongo Soco. Assim, conseguiríamos fazer uma busca apenas por "Gongo Soco", que juntaria o histórico das duas auditorias dentro desse mesmo TAC.
 
 ## Exibir
+Ao clicar no botão de ação **Exibir**, o usuário *Instituição Admin* pode visualizar as informações detalhadas dos TACs, incluindo [6.2.1 Submissões](#sec-submissoes), [6.2.2 Responsáveis](#sec-responsaveis), [6.2.3 Nomes alternativos](#sec-nomes), [6.2.4 Planilhas](#sec-planilhas), [6.2.5 Histórico do TAC](#sec-historico).
 
+### Submissões {#sec-submissoes}
+O usuário *Instituição Admin* pode submeter e validar planilhas-modelo quando necessário (@figu-submissoes). 
+
+::: {#figu-submissoes}
+```{r}
+#| label: figu-submissoes
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/submissoes.png")
+```
+Tela Submissões
+:::
+
+No campo **Descrição** as planilhas submetidas podem apresentar três diferentes resultados:
+
+- Cancelada: quando uma submissão é cancelada antes da finalização do processo de validação.
+- Descartada: quando uma submissão é descartada após a conclusão do processo de validação devido a erros que impedem sua validação.
+- Validada: quando uma submissão é validada após a conclusão do processo de validação sem erros impeditivos.
+
+
+O processo de validação das planilhas submetidas passa por uma avaliação criteriosa, desde a estrutura do cabeçalho até a última coluna da planilha. As inconsistências encontradas podem ser classificadas como:
+
+- Aviso: permite que a submissão seja validada, após o usuário checar todos os avisos apresentados;
+- Erro: impede que a submissão seja validada. A submissão deve ser descartada e outra submissão deve ser realizada para nova rodada de validação.
+
+::: {.callout}
+## Nota
+Em caso de recomendações com inconsistências do tipo Aviso e Erro na mesma submissão, o procedimento segue o caso mais restritivo, ou seja, **Erro**.
+:::
+
+### Responsáveis {#sec-responsaveis}
+Nesta aba, o usuário *Instituição Admin* pode visualizar os responsáveis ou criar um **Novo Responsável** que será adicionado à lista de usuários aptos a enviar planilhas para determinado TAC (@figu-responsaveis). 
+
+::: {#figu-responsaveis}
+```{r}
+#| label: figu-responsaveis
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/responsaveis.png")
+```
+Tela Responsáveis
+:::
+
+### Nomes alternativos {#sec-nomes}
+Nesta aba, o usuário *Instituição Admin* pode visualizar os nomes alternativos do TAC (quando houver) ou criar um **Novo Nome Alternativo** e definí-lo como principal (@figu-nomes).
+
+::: {#figu-nomes}
+```{r}
+#| label: figu-nomes
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/nomes.png")
+```
+Tela Nomes alternativos
+:::
+
+Por padrão, não existe um “nome fantasia” para um TAC. O CIGA criou esses nomes para facilitar a identificação. As auditorias também criaram seus próprios “nomes fantasia”, o que pode resultar em discrepâncias entre os nomes dos TACs cadastrados no CIGA e os utilizados pelas auditorias (que podem usar nomes muito longos, sem acentuação ou até mesmo em inglês).
+
+Neste sentido, para evitar que a validação seja impedida de ocorrer devido a diferenças nos “nomes fantasia”, é possível criar nomes alternativos (conhecidos como “alias” em inglês).;
+
+::: {.callout}
+## Nota
+O nome alternativo, assim como o nome fantasia, é único. Portanto, é importante orientar as auditorias sobre essa questão. Por exemplo, se a RIZZO utilizasse “TAC Gongo Soco” em sua planilha e já tivesse criado esse nome alternativo, a SLR, ao assumir Gongo Soco, não conseguiria utilizar “TAC Gongo Soco” em sua planilha.
+:::
+
+### Planilhas {#sec-planilhas}
+Nesta aba, o usuário *Instituição Admin* pode baixar três tipos de planilhas (@figu-planilhas):
+
+- Planilha-modelo em branco: versão mais recente da planilha-modelo em branco;
+- Planilha mais recente validada com sucesso: planilha mais recente com submissão validada;
+- Planilha de conversão de IDs: planilha que relaciona o ID do TAC com o ID CIGA.
+
+::: {#figu-planilhas}
+```{r}
+#| label: figu-planilhas
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/planilhas.png")
+```
+Tela Planilhas
+:::
+
+### Histórico do TAC {#sec-historico}
+Nesta aba, o usuário *Instituição Admin* pode visualizar o histórico do TAC, incluindo alterações na situação do TAC (@figu-historico). 
+
+::: {#figu-historico}
+```{r}
+#| label: figu-historico
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/historico.png")
+```
+Tela Histórico do TAC
+:::
 
 ## Editar
+O botão de ação **Editar** permite ao usuário *Instituição Admin* modificar as informações de qualquer TAC, com ênfase na alteração da Situação(@figu-editar-tac). 
 
+::: {#figu-editar-tac}
+```{r}
+#| label: figu-editar-tac
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/editar-tac.png")
+```
+Tela Editar
+:::
 
 ## Excluir
+O botão de ação **Excluir** permite ao usuário *Instituição Admin* remover TACs. Não é possível excluir um TAC com recomendações em aberto (@figu-excluir-tac).
 
-## Lembrar de:
-No manual, o ideal é que tenhamos no "Submeter uma planilha", a explicação de todos os tipos possíveis daqueles "avisos" que um usuário pode receber, tipo:
- 
-• Validada
-Finalizada com erros
-etc
+::: {#figu-excluir-tac}
+```{r}
+#| label: figu-excluir-tac
+#| out-width: ~
+knitr::include_graphics("images/06_tacs/excluir-tac.png")
+```
+Tela Excluir
+:::
