--- a/08_empreendedores.qmd
+++ b/08_empreendedores.qmd
@@ -1,5 +1,6 @@
 # Empreendedores {#sec-empreendedores}
-A tela Empreendedores exibe uma lista dos empreendedores cadastrados no Sisvar, seguindo a nomenclatura do **<a href="https://app.anm.gov.br/SIGBM/Publico/GerenciarPublico' target='_blank'">Sistema de Gestão de Segurança de Barragem de Mineração (SIGBM)</a>**. Nesta tela, é possível gerenciar os empreendedores cadastrados, incluindo busca, visualização, edição, exclusão e adição de novos empreendedores (@figu-tela08).
+
+A tela Empreendedores exibe uma lista dos empreendedores cadastrados no Sisvar, seguindo a nomenclatura do **<a href="https://app.anm.gov.br/SIGBM/Publico/GerenciarPublico' target='_blank'">Sistema de Gestão de Segurança de Barragem de Mineração (SIGBM)</a>**. Nesta tela, é possível gerenciar os empreendedores, incluindo busca, visualização, edição, exclusão e adição de novos empreendedores (@figu-tela08).
 
 ::: {#figu-tela08}
 ```{r}
@@ -11,7 +12,7 @@ Tela Empreendedores
 :::
 
 ## Criar
-O usuário Instituição Admin pode criar um **Novo Empreendedor** preenchendo o campo obrigatório "Nome" do formulário (@figu-criar-empreendedor).
+O usuário com Função de *Instituição Admin* pode criar um **Novo Empreendedor** preenchendo o campo obrigatório "Nome" do formulário (@figu-criar-empreendedor).
 
 ::: {#figu-criar-empreendedor}
 ```{r}
@@ -23,7 +24,7 @@ Criar Empreendedores
 :::
 
 ## Exibir
-Ao clicar no botão de ação **Exibir**, o usuário Instituição Admin pode criar um **Novo Nome Alternativo** para o TAC (@figu-nomealternativo). O sistema reconhecerá, durante a validação das planilhas, tanto o nome principal quanto o nome alternativo, sendo possível definir o novo nome criado como principal.
+Ao clicar no botão de ação **Exibir**, o usuário *Instituição Admin* pode criar um **Novo Nome Alternativo** para o TAC (@figu-nomealternativo). O sistema reconhecerá, durante a validação das planilhas, tanto o nome principal quanto o nome alternativo, sendo possível definir o novo nome criado como principal.
 
 ::: {#figu-nomealternativo}
 ```{r}
@@ -35,7 +36,7 @@ Novo Nome Alternativo
 :::
 
 ## Editar
-O botão de ação **Editar** permite ao usuário Instituição Admin modificar o nome de qualquer empreendedor.
+O botão de ação **Editar** permite ao usuário *Instituição Admin* modificar o nome de qualquer empreendedor.
 
 ::: callout
 ## Nota
