--- a/05_auditorias.qmd
+++ b/05_auditorias.qmd
@@ -1,7 +1,7 @@
 # Auditorias {#sec-auditorias}
 A tela Auditorias exibe uma lista das auditorias cadastradas no Sisvar, organizadas em ordem alfabética. Nesta tela, é possível gerenciar as auditorias, incluindo busca, edição, exclusão e adição de novas auditorias, além da  exibição dos TACs relacionados a cada auditoria (@figu-tela05).
 
-Ao clicar no campo "TACs", o usuário será redirecionado à tela [6 TACs](#sec-tacs) e serão exibidos os TACs relacionados à auditoria selecionada.
+Ao clicar no campo "TACs", o usuário será redirecionado à tela [TACs](#sec-tacs) e serão exibidos os TACs relacionados à auditoria selecionada.
 
 ::: {#figu-tela05}
 ```{r}
@@ -12,7 +12,7 @@ knitr::include_graphics("images/05_auditorias/tela05.png")
 Tela Auditorias
 :::
 
-## Criar nova Auditoria
+## Criar
 O usuário com Função de *Instituição Admin* pode cadastrar uma **Nova Auditoria** preenchendo os campos Nome e Código da auditoria. O código deve conter 3 caracteres, sendo os 2 primeiros obrigatoriamente letras (@figu-criar-auditoria).
 
 ::: {#figu-criar-auditoria}
@@ -23,3 +23,6 @@ knitr::include_graphics("images/05_auditorias/criar-auditoria.png")
 ```
 Criar Auditoria
 :::
+
+## Detalhar
+O usuário com Função de *Instituição Admin* pode visualizar os datalhes dos TACs de uma auditoria em forma de lista ao clicar no botão Detalhar.
