--- a/08_empreendedores.qmd
+++ b/08_empreendedores.qmd
@@ -42,3 +42,6 @@ O botão de ação **Editar** permite ao usuário *Instituição Admin* modifica
 ## Nota
 Recomenda-se realizar esta ação somente se o nome do empreendedor foi alterado no SIGBM.
 :::
+
+## Excluir
+O botão de ação **Excluir** permite ao usuário *Instituição Admin* remover um empreendedor.
